# python-django-app-starter

./: .gitignore  README.md  create_venv.sh  dev-requirements.txt  install.sh  install_dependencies.py  pyproject.toml  requirements.txt
.dev/: python-app-starter.sublime-project
install/: __main__.py  install_dependencies.py
my_project/my_project/: settings.py
src/config/: asgi.py  settings.py  urls.py  wsgi.py
src/web/: urls.py  views.py
src/web/templates/: index.html
tools/: generate-requirements.txt.py
