[project]
name = "mypythondjangoproject"
version = "0.1.0"
dependencies = [
  "django >= 4.2.1, < 4.3",
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "ruff",
  
  "pip-tools",
]

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.setuptools]
py-modules = []
